docs: Add limitations documentation and update index to include new page

--- a/index.mdx
+++ b/index.mdx
@@ -34,12 +34,20 @@ DeployStack is **The First MCP-as-a-Service Platform**. We solve two critical pr
     Host DeployStack on your own servers for complete control and security
   </Card>  
   
-  <Card 
-    icon="shield" 
-    href="/security" 
+  <Card
+    icon="shield"
+    href="/security"
     title="Security & Governance"
   >
     Understand how DeployStack eliminates credential sprawl and provides enterprise security
+  </Card>
+
+  <Card
+    icon="circle-exclamation"
+    href="/general/limitations"
+    title="Platform Limitations"
+  >
+    Understand when global satellites work and when you need local MCP or team satellites
   </Card>
 </CardGroup>
 
