--- a/self-hosted/docker-compose.mdx
+++ b/self-hosted/docker-compose.mdx
@@ -44,6 +44,10 @@ Download the `docker-compose.yml` file to your working directory:
 curl -o docker-compose.yml https://raw.githubusercontent.com/deploystackio/deploystack/main/docker-compose.yml
 ```
 
+<Info>
+**Default Database Password**: The Docker Compose file uses a default PostgreSQL password (`deploystack`) for quick demos and local testing. For production or internet-exposed deployments, set a strong password via the `POSTGRES_PASSWORD` environment variable in your `.env` file.
+</Info>
+
 ### Step 2: Generate Encryption Secret
 
 DeployStack requires a secure encryption secret for protecting sensitive data like API keys and credentials.
