--- a/self-hosted/quick-start.mdx
+++ b/self-hosted/quick-start.mdx
@@ -52,7 +52,7 @@ The fastest way to get DeployStack backend and frontend running with proper netw
 
   <Step title="Create Admin Account">
     When opening the frontend, you will be redirected to `http://localhost:8080/login`
-    - Go to "Create Account" to set up your admin user ([read more about user types](/roles))
+    - Go to "Create Account" to set up your admin user ([read more about user types](/general/roles))
     - Login with your new admin account
   </Step>
 
@@ -422,9 +422,9 @@ If you need assistance:
 ### Learn More
 
 - **[Self-Hosted Documentation](/self-hosted)**: Comprehensive deployment guides
-- **[Local Development](/local-setup)**: Set up development environment
-- **[Global Settings](/global-settings)**: Configure email, auth, and more
-- **[User Roles](/roles)**: Manage team permissions
+- **[Local Development](/general/local-setup)**: Set up development environment
+- **[Global Settings](/general/global-settings)**: Configure email, auth, and more
+- **[User Roles](/general/roles)**: Manage team permissions
 
 ---
 
