--- a/self-hosted/setup.mdx
+++ b/self-hosted/setup.mdx
@@ -406,4 +406,4 @@ tar xzf deploystack-backup-20250108.tar.gz
 
 ---
 
-**Next Steps**: After completing platform setup, configure [user roles and permissions](/roles) and set up your first [team workspaces](/teams).
+**Next Steps**: After completing platform setup, configure [user roles and permissions](/general/roles) and set up your first [team workspaces](/general/teams).
