--- a/development/backend/index.mdx
+++ b/development/backend/index.mdx
@@ -23,10 +23,22 @@ The DeployStack backend is a modern, high-performance Node.js application built 
 ```bash
 cd services/backend
 npm install
+
+# Start PostgreSQL (requires Docker)
+npm run postgres:local
+
+# Configure environment
+cp .env.example .env
+
+# Start development server
 npm run dev
 ```
 
-The development server starts at `http://localhost:3000` with API documentation at `/documentation`.
+The development server starts at `http://localhost:3000`.
+
+<Info>
+On first run, visit `http://localhost:5173/setup` (frontend) to initialize the database and create your admin account.
+</Info>
 
 ## Development Guides
 
